--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -7,4 +7,5 @@
       <p><%= restaurant.category %></p>
     <% end %>
   </ul>
+  <%= link_to "Create a new restaurant", new_restaurant_path %>
 </div>
